--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexaoPadrao": "",
+    "ConexaoPadrao": "Server=tcp:servidordodesafio.database.windows.net,1433;Initial Catalog=bancododesafio;Persist Security Info=False;User ID=admindesafio;Password=Senhateste@1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "SAConnectionString": "",
     "AzureTableName": "FuncionarioLog"
   }
